refactor: support cluter and node + reorganize consumer/producer/repo

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,20 +1,16 @@
-collector.topic {
+collector {
   event-topic = "__topic"
   event-topic = ${?COLLECTOR_TOPIC_EVENT_TOPIC}
 
-  poll-interval = 1 minute
+  topic {
+    poll-interval = 1 minute
+  }
+  cluster {
+    poll-interval = 30 minutes
+  }
 }
 
 kafka {
   bootstrap-servers = "localhost:29092"
   bootstrap-servers = ${?KAFKA_BOOTSTRAP_SERVERS}
-}
-
-akka.kafka.consumer {
-  poll-interval = 1s
-
-  kafka-clients {
-    enable-auto-commit = false
-    auto-offset-reset = earliest
-  }
 }
