--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,12 +1,14 @@
 collector {
   event-topic = "__topic"
-  event-topic = ${?COLLECTOR_TOPIC_EVENT_TOPIC}
+  event-topic = ${?COLLECTOR_EVENT_TOPIC}
 
   topic {
     poll-interval = 1 minute
+    poll-interval = ${?COLLECTOR_TOPIC_POLL_INTERVAL}
   }
   cluster {
     poll-interval = 30 minutes
+    poll-interval = ${?COLLECTOR_CLUSTER_POLL_INTERVAL}
   }
 }
 
