feat: enabling logging

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,3 +16,9 @@ kafka {
   bootstrap-servers = "localhost:29092"
   bootstrap-servers = ${?KAFKA_BOOTSTRAP_SERVERS}
 }
+
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  logLevel = "INFO"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+}
