feat: akka http route to query state

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,11 +3,11 @@ collector {
   event-topic = ${?COLLECTOR_EVENT_TOPIC}
 
   topic {
-    poll-interval = 1 minute
+    poll-interval = 30 seconds
     poll-interval = ${?COLLECTOR_TOPIC_POLL_INTERVAL}
   }
   cluster {
-    poll-interval = 30 minutes
+    poll-interval = 1 minute
     poll-interval = ${?COLLECTOR_CLUSTER_POLL_INTERVAL}
   }
 }
