--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
 deploy:
   provider: script
   script:
-    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+    - echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_USERNAME" --password-stdin
     - sbt docker:publish
 #  on:
 #    branch: master
