--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
+sudo: required
 language: scala
+scala:
+- 2.12.6
+jdk: oraclejdk8
 
 services:
 - docker
-
-jdk: oraclejdk8
-
-scala:
-- 2.12.6
 
 env:
   matrix:
@@ -22,12 +21,12 @@ deploy:
     all_branches: true
 #    branch: master
 
-before_cache:
-  # Tricks to avoid unnecessary cache updates
-  - find $HOME/.sbt -name "*.lock" | xargs rm
-  - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
+#before_cache:
+#  # Tricks to avoid unnecessary cache updates
+#  - find $HOME/.sbt -name "*.lock" | xargs rm
+#  - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
 
-cache:
-  directories:
-  - $HOME/.ivy2/cache
-  - $HOME/.sbt
+#cache:
+#  directories:
+#  - $HOME/.ivy2/cache
+#  - $HOME/.sbt
