--- a/.travis.yml
+++ b/.travis.yml
@@ -21,12 +21,12 @@ deploy:
     all_branches: true
 #    branch: master
 
-#before_cache:
-#  # Tricks to avoid unnecessary cache updates
-#  - find $HOME/.sbt -name "*.lock" | xargs rm
-#  - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
+before_cache:
+  # Tricks to avoid unnecessary cache updates
+  - find $HOME/.sbt -name "*.lock" | xargs rm
+  - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
 
-#cache:
-#  directories:
-#  - $HOME/.ivy2/cache
-#  - $HOME/.sbt
+cache:
+  directories:
+  - $HOME/.ivy2/cache
+  - $HOME/.sbt
