--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ deploy:
   script: sbt docker:publish
   on:
     branch: master
+    tags: true
 
 before_cache:
   # Tricks to avoid unnecessary cache updates
