feat: configurable collect internal topics

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,6 +5,8 @@ collector {
   topic {
     poll-interval = 30 seconds
     poll-interval = ${?COLLECTOR_TOPIC_POLL_INTERVAL}
+    include-internal-topics = false
+    include-internal-topics = ${?COLLECTOR_TOPIC_INCLUDE_INTERNAL}
   }
   cluster {
     poll-interval = 1 minute
