fix: topics lists to string instead of list

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,6 +7,10 @@ collector {
     poll-interval = ${?COLLECTOR_TOPIC_POLL_INTERVAL}
     include-internal-topics = false
     include-internal-topics = ${?COLLECTOR_TOPIC_INCLUDE_INTERNAL}
+    blacklist = ""
+    blacklist = ${?COLLECTOR_TOPIC_BLACKLIST}
+    whitelist = ""
+    whitelist = ${?COLLECTOR_TOPIC_WHITELIST}
   }
   cluster {
     poll-interval = 1 minute
